--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/core/editor/SceneEditor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/core/editor/SpriteEditor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/core/editor/TextureEditor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/core/editor/FontEditor.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/detail/glad.c
   ${CMAKE_CURRENT_SOURCE_DIR}/detail/Operators.cpp
