--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -76,6 +76,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/network/NetHost.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/network/NetPeer.cpp
 
+  ${CMAKE_CURRENT_SOURCE_DIR}/resources/DejaVuSans.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/FontResource.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/ShaderResource.cpp
   
