--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ script:
 - mkdir build && cd build
 - cmake ../ -G"$GENERATOR" $CMAKE_FLAGS -DBUILD_DEMO=ON && sudo cmake --build . --target install
 - sudo cmake --build . --target package
-- cd ../ && mkdir deploy
+- cd ../cmake_template && mkdir build && cd build
+- cmake ../ -G"$GENERATOR" $CMAKE_FLAGS && sudo cmake --build .
+- cd ../../ && mkdir deploy
 - cp build/*.zip deploy
 matrix:
   fast_finish: true
