--- a/cmake_template/CMakeLists.txt
+++ b/cmake_template/CMakeLists.txt
@@ -6,9 +6,6 @@ SET(PROJECT_NAME cmake-template)
 # Set up the project
 project(${PROJECT_NAME})
 
-# Set the path to our find modules
-SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
-
 # Some default variables which the user may change
 SET(CMAKE_BUILD_TYPE        Debug CACHE STRING  "Choose the type of build (Debug or Release)")
 
@@ -28,8 +25,8 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wreorder -Wheader-guard")
 endif()
 
-# Only works with SFML version 2.4 and above
-SET(SFML_MIN_VERSION 2.4)
+# Only works with SFML version 2.5 and above
+SET(SFML_MIN_VERSION 2.5)
 find_package(SFML ${SFML_MIN_VERSION} REQUIRED graphics window audio system network)
 
 # Find xyginext
@@ -39,12 +36,6 @@ find_package(XYGINEXT REQUIRED)
 if(UNIX AND NOT APPLE)
   find_package(X11 REQUIRED)
 endif()
-
-# Additional include directories
-include_directories(
-  ${XYXT_INCLUDE_DIR}
-  ${SFML_INCLUDE_DIR} 
-  ${CMAKE_SOURCE_DIR}/include)
 
 if(X11_FOUND)
   include_directories(${X11_INCLUDE_DIRS})
@@ -63,10 +54,10 @@ endif()
 add_executable(${PROJECT_NAME} ${PROJECT_SRC})
 
 # Linker settings
-target_link_libraries(${PROJECT_NAME}
-  ${SFML_LIBRARIES}
-  ${SFML_DEPENDENCIES}
-  ${XYXT_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} xyginext)
+
+# Additional include directories
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 if(X11_FOUND)
   target_link_libraries(${PROJECT_NAME}
