moved resource holder constructor to own file

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -78,6 +78,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
 
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/DejaVuSans.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/FontResource.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/resources/ResourceHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/ShaderResource.cpp
   
   ${CMAKE_CURRENT_SOURCE_DIR}/util/Random.cpp
