--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="src\ecs\systems\SpriteAnimator.cpp" />
     <ClCompile Include="src\ecs\systems\SpriteSystem.cpp" />
     <ClCompile Include="src\ecs\systems\TextRenderer.cpp" />
+    <ClCompile Include="src\ecs\systems\TextSystem.cpp" />
     <ClCompile Include="src\ecs\systems\UISystem.cpp" />
     <ClCompile Include="src\graphics\postprocess\PostAntique.cpp" />
     <ClCompile Include="src\graphics\postprocess\PostBloom.cpp" />
@@ -244,6 +245,7 @@
     <ClInclude Include="include\xyginext\ecs\systems\SpriteAnimator.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\TextRenderer.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\TextSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\UISystem.hpp" />
     <ClInclude Include="include\xyginext\graphics\postprocess\Antique.hpp" />
     <ClInclude Include="include\xyginext\graphics\postprocess\Bloom.hpp" />
