--- a/cmake_template/CMakeLists.txt
+++ b/cmake_template/CMakeLists.txt
@@ -42,7 +42,7 @@ if(X11_FOUND)
 endif()
 
 # Project source files
-#add_subdirectory(include)
+add_subdirectory(include)
 add_subdirectory(src)
 
 # Add XY_DEBUG on Debug builds
