add AudioScape configuration file, rename SoundResource to AudioResource to be more consistent with naming - sorry!

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 #source files used by xyginext library
 set(PROJECT_SRC ${PROJECT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/audio/AudioScape.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/AudioSourceImpl.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/Mixer.cpp
 
