--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="src\ecs\systems\CallbackSystem.cpp" />
     <ClCompile Include="src\ecs\systems\CameraSystem.cpp" />
     <ClCompile Include="src\ecs\systems\CommandSystem.cpp" />
+    <ClCompile Include="src\ecs\systems\DynamicTreeSystem.cpp" />
     <ClCompile Include="src\ecs\systems\InterpolationSystem.cpp" />
     <ClCompile Include="src\ecs\systems\ParticleSystem.cpp" />
     <ClCompile Include="src\ecs\systems\QuadTree.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="include\xyginext\ecs\ComponentPool.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\AudioEmitter.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\AudioListener.hpp" />
+    <ClInclude Include="include\xyginext\ecs\components\BroadPhaseComponent.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Callback.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Camera.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\CommandTarget.hpp" />
@@ -240,6 +242,7 @@
     <ClInclude Include="include\xyginext\ecs\systems\CallbackSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\CameraSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\CommandSystem.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\DynamicTreeSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\InterpolationSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\ParticleSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\QuadTree.hpp" />
