--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 - git clone https://github.com/sfml/sfml && cd sfml
 - git checkout tags/2.5.0
 - mkdir build && cd build
-- cmake .. $CMAKE_FLAGS && sudo cmake --build . --target install && cd ../..
+- cmake .. -G"$GENERATOR" $CMAKE_FLAGS && sudo cmake --build . --target install && cd ../..
 - git clone https://github.com/fallahn/tmxlite
 - cd tmxlite/tmxlite && mkdir build && cd build
 - cmake .. -G"$GENERATOR" $CMAKE_FLAGS -DCMAKE_BUILD_TYPE=Release && sudo cmake --build
