--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ option(CMAKE_BUILD_TYPE "Choose the type of build (Debug or Release)" Debug)
 option(BUILD_SHARED_LIBS "Whether to build shared libraries" ON)
 option(BUILD_DEMO "Build the xygine demo" OFF)
 
-# We're using c++17
-set(CMAKE_CXX_STANDARD 17)
+# We're using c++14
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # enable some warnings in debug builds with gcc/clang
@@ -102,20 +102,16 @@ endif()
 # The demo target
 if (BUILD_DEMO)
   add_subdirectory(Demo/src)
-  add_executable(${DEMO_NAME} ${DEMO_SRC})
-
-# on macOS and iOS, create a bundle with the resources
   if (APPLE)
-    set(RESOURCE_FILES
-      ${CMAKE_SOURCE_DIR}/Demo/assets/*
-      ${CMAKE_SOURCE_DIR}/Demo/macOS/icon.icns)
-
-    set_target_properties(${DEMO_NAME} PROPERTIES
-      MACOSX_BUNDLE TRUE
-      MACOSX_BUNDLE_ICON_FILE icon.icns
-      RESOURCE "${RESOURCE_FILES}")
-  endif(APPLE)
-
+    set_source_files_properties( 
+    ${CMAKE_SOURCE_DIR}/Demo/assets PROPERTIES MACOSX_PACKAGE_LOCATION Resources )
+    set_source_files_properties(
+    ${CMAKE_SOURCE_DIR}/Demo/macOS/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources )
+    add_executable(${DEMO_NAME} MACOSX_BUNDLE ${DEMO_SRC} ${CMAKE_SOURCE_DIR}/Demo/assets ${CMAKE_SOURCE_DIR}/Demo/macOS/icon.icns)
+    set_target_properties(${DEMO_NAME} PROPERTIES MACOSX_BUNDLE_ICON_FILE icon.icns)
+  else()
+    add_executable(${DEMO_NAME} ${DEMO_SRC})
+  endif()
   add_dependencies(${DEMO_NAME} ${PROJECT_NAME})
 
   find_package(TMXLITE REQUIRED)
@@ -127,6 +123,7 @@ if (BUILD_DEMO)
   
   target_link_libraries(${DEMO_NAME} ${PROJECT_NAME} ${TMXLITE_LIBRARIES} sfml-graphics sfml-audio)
   target_include_directories(${DEMO_NAME} PRIVATE ${TMXLITE_INCLUDE_DIR} $<TARGET_PROPERTY:${PROJECT_NAME},INTERFACE_INCLUDE_DIRECTORIES>)
+  
   
   install(TARGETS ${DEMO_NAME} DESTINATION .)
 endif()
