first pass at #105

--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -560,6 +560,9 @@
     <ClInclude Include="include\xyginext\resources\DejaVuSans.hpp">
       <Filter>Header Files\resources</Filter>
     </ClInclude>
+    <ClInclude Include="include\xyginext\resources\SystemFont.hpp">
+      <Filter>Header Files\resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\xyginext\ecs\Entity.inl">
