--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -275,6 +275,7 @@
     <ClInclude Include="include\xyginext\resources\Resource.hpp" />
     <ClInclude Include="include\xyginext\resources\ResourceHandler.hpp" />
     <ClInclude Include="include\xyginext\resources\ShaderResource.hpp" />
+    <ClInclude Include="include\xyginext\resources\SystemFont.hpp" />
     <ClInclude Include="include\xyginext\util\Const.hpp" />
     <ClInclude Include="include\xyginext\util\Math.hpp" />
     <ClInclude Include="include\xyginext\util\Position.hpp" />
