--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -587,7 +587,7 @@
     <ClInclude Include="include\xyginext\audio\midi\File.hpp">
       <Filter>Header Files\audio\midi</Filter>
     </ClInclude>
-    <ClInclude Include="src\audio\midi\endianness.hpp">
+    <ClInclude Include="src\audio\midi\Util.hpp">
       <Filter>Header Files\audio\midi</Filter>
     </ClInclude>
   </ItemGroup>
