initial MIDI playback support

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/midi/Event.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/midi/File.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/midi/Message.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/audio/midi/Player.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/audio/midi/Track.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/core/App.cpp
