--- a/xyginext/include/xyginext/CMakeLists.txt
+++ b/xyginext/include/xyginext/CMakeLists.txt
@@ -31,7 +31,7 @@ set(PROJECT_SRC  ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/Camera.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/CommandTarget.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/Drawable.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/NetInterpolation.hpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/NetInterpolation.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/ParticleEmitter.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/QuadTreeItem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/components/Sprite.hpp
@@ -44,7 +44,7 @@ set(PROJECT_SRC  ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/CallbackSystem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/CameraSystem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/CommandSystem.hpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/InterpolationSystem.hpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/InterpolationSystem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/ParticleSystem.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/QuadTree.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ecs/systems/RenderSystem.hpp
