--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -66,7 +66,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui-SFML.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_tabs.cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_tabs.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/network/EnetClientImpl.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/network/EnetHostImpl.cpp
