--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -279,9 +279,6 @@
     <ClCompile Include="src\core\dialogues\nfd\nfd_win.cpp">
       <Filter>Source Files\core\dialogues\nfd</Filter>
     </ClCompile>
-    <ClCompile Include="src\imgui\imgui_tabs.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
     <ClCompile Include="src\imgui\imgui-SFML.cpp">
       <Filter>Source Files\imgui</Filter>
     </ClCompile>
@@ -302,6 +299,9 @@
     </ClCompile>
     <ClCompile Include="src\resources\ResourceHandler.cpp">
       <Filter>Source Files\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_widgets.cpp">
+      <Filter>Source Files\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
