--- a/tutorial/part_2/include/CMakeLists.txt
+++ b/tutorial/part_2/include/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(PROJECT_SRC 
   ${PROJECT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/CommandIDs.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Game.hpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/GameState.hpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/States.hpp 
