update tutorial part 3 source

--- a/tutorial/part_3/src/CMakeLists.txt
+++ b/tutorial/part_3/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(PROJECT_SRC 
   ${PROJECT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/BallSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/GameState.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
