--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -273,6 +273,7 @@
     <ClInclude Include="include\xyginext\resources\ShaderResource.hpp" />
     <ClInclude Include="include\xyginext\resources\SystemFont.hpp" />
     <ClInclude Include="include\xyginext\util\Const.hpp" />
+    <ClInclude Include="include\xyginext\util\IO.hpp" />
     <ClInclude Include="include\xyginext\util\Math.hpp" />
     <ClInclude Include="include\xyginext\util\Position.hpp" />
     <ClInclude Include="include\xyginext\util\Random.hpp" />
