--- a/ShaderEditor/src/CMakeLists.txt
+++ b/ShaderEditor/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(PROJECT_SRC 
   ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/TextEditor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/WindowFunctions.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp
