refactor editor window to own class

--- a/ShaderEditor/ShaderEditor.vcxproj
+++ b/ShaderEditor/ShaderEditor.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\EditorWindow.cpp" />
     <ClCompile Include="src\imgui\imgui-SFML.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
@@ -139,9 +140,12 @@
     <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\TextEditor.cpp" />
+    <ClCompile Include="src\tinyfiledialogs.c" />
     <ClCompile Include="src\WindowFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\EditorWindow.hpp" />
+    <ClInclude Include="src\WindowFlags.hpp" />
     <ClInclude Include="src\WindowFunctions.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
