--- a/ShaderEditor/ShaderEditor.vcxproj.filters
+++ b/ShaderEditor/ShaderEditor.vcxproj.filters
@@ -42,9 +42,21 @@
     <ClCompile Include="src\WindowFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tinyfiledialogs.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\EditorWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\WindowFunctions.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\EditorWindow.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\WindowFlags.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
