--- a/ShaderEditor/src/CMakeLists.txt
+++ b/ShaderEditor/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(PROJECT_SRC 
   ${PROJECT_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/EditorWindow.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TextEditor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/tinyfiledialogs.c
   ${CMAKE_CURRENT_SOURCE_DIR}/WindowFunctions.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
