add reading shader uniforms and binding to UI

--- a/ShaderEditor/ShaderEditor.vcxproj.filters
+++ b/ShaderEditor/ShaderEditor.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\WindowFunctions.hpp">
